fix: column spacing and text updates

--- a/app/modules/Grid/Grid.scss
+++ b/app/modules/Grid/Grid.scss
@@ -8,7 +8,7 @@
   z-index: -2;
   opacity: 0;
   transition: opacity .8s ease-in-out;
-  opacity: 1;
+  // opacity: 1;
 }
 
 .ro-Grid--rows {
