--- a/app/modules/Hero/_Hero.scss
+++ b/app/modules/Hero/_Hero.scss
@@ -146,8 +146,10 @@
 
     &.is-animated {
       opacity: 0;
-      animation: fadeIn 4.8s;
-      animation-delay: 1.4s;
+      // animation: fadeIn 4.8s;
+      animation: fadeIn 2.4s;
+      // animation-delay: 1.4s;
+      animation-delay: .7s;
       animation-fill-mode: forwards;    
     }
   } 
