--- a/app/modules/Xp/_Xp.scss
+++ b/app/modules/Xp/_Xp.scss
@@ -20,8 +20,7 @@
     padding: 24px 0 32px 3px;
   }  
 
-
-  @include media("≥X") { 
+  @include media("≥E") { 
     // padding-bottom: 54px;
     max-width: 710px;
     column-gap: 30px;
